# blog-rs

./: .gitignore  Cargo.toml  README.md  fleet.toml
src/: main.rs
src/.cargo/: config.toml
src/controller/: link.rs  mod.rs  post.rs
static/: code-colorscheme.min.css  script.js  style.css
static/entries/: 01_creating_a_personal_blog.md  02_building_a_backend.md
templates/: post.html.tera
